# SimpleCAD

./: CMakeLists.txt  README.md
QT/include/QtCore/: qconfig.h  qtcore-config.h
QT/include/QtCore/5.14.2/QtCore/private/: qconfig_p.h
QT/include/QtGui/: qtgui-config.h
QT/include/QtGui/5.14.2/QtGui/private/: qtgui-config_p.h
QT/lib/: Qt5Core.lib  Qt5Gui.lib  Qt5Widgets.lib
code/: CADWidget.cpp  CADWidget.hpp  CADWindow.cpp  CADWindow.hpp  Geometry.hpp  SimpleCAD.cpp  StepReader.hpp
